--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -155,14 +155,14 @@
     height: 70px;
   }
   
-  /* .contactLink {
+  .contactLink {
     margin-bottom: 50px;
   }
   
   .contactButton {
     position: relative;
   }
-   */
+  
   .circleText {
     letter-spacing: 3px;
     font-size: 20px;
